[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-accounts-bench"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
publish = false

[dependencies]
log = "0.4.11"
rayon = "1.5.0"
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-measure = { path = "../measure", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
rand = "0.7.0"
clap = "2.33.1"
crossbeam-channel = "0.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
