[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-accounts-cluster-bench"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.4.1"
panoptes-account-decoder = { path = "../account-decoder", version = "=1.7.3" }
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-client = { path = "../client", version = "=1.7.3" }
panoptes-core = { path = "../core", version = "=1.7.3" }
panoptes-faucet = { path = "../faucet", version = "=1.7.3" }
panoptes-gossip = { path = "../gossip", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-measure = { path = "../measure", version = "=1.7.3" }
panoptes-net-utils = { path = "../net-utils", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-transaction-status = { path = "../transaction-status", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
spl-token-v2-0 = { package = "spl-token", version = "=3.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
panoptes-local-cluster = { path = "../local-cluster", version = "=1.7.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
