[package]
name = "panoptes-banks-interface"
version = "1.7.3"
description = "Panoptes banks RPC interface"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-banks-interface"
edition = "2018"

[dependencies]
mio = "0.7.6"
serde = { version = "1.0.122", features = ["derive"] }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
tarpc = { version = "0.24.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "panoptes_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
