[package]
name = "panoptes-banks-server"
version = "1.7.3"
description = "Panoptes banks server"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-banks-server"
edition = "2018"

[dependencies]
bincode = "1.3.1"
futures = "0.3"
log = "0.4.11"
mio = "0.7.6"
panoptes-banks-interface = { path = "../banks-interface", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-metrics = { path = "../metrics", version = "=1.7.3" }
tarpc = { version = "0.24.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "panoptes_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
