[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-bench-exchange"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
publish = false

[dependencies]
clap = "2.33.1"
itertools = "0.9.0"
log = "0.4.11"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.7.0"
rayon = "1.5.0"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-core = { path = "../core", version = "=1.7.3" }
panoptes-genesis = { path = "../genesis", version = "=1.7.3" }
panoptes-client = { path = "../client", version = "=1.7.3" }
panoptes-exchange-program = { path = "../programs/exchange", version = "=1.7.3" }
panoptes-faucet = { path = "../faucet", version = "=1.7.3" }
panoptes-gossip = { path = "../gossip", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-metrics = { path = "../metrics", version = "=1.7.3" }
panoptes-net-utils = { path = "../net-utils", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }

[dev-dependencies]
panoptes-local-cluster = { path = "../local-cluster", version = "=1.7.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
