[package]
name = "panoptes-clap-utils"
version = "1.7.3"
description = "Panoptes utilities for the clap"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-clap-utils"
edition = "2018"

[dependencies]
clap = "2.33.0"
rpassword = "4.0"
panoptes-remote-wallet = { path = "../remote-wallet", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
thiserror = "1.0.21"
tiny-bip39 = "0.8.0"
uriparse = "0.6.3"
url = "2.1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.1.0"

[lib]
name = "panoptes_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
