[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-cli-output"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
console = "0.14.1"
humantime = "2.0.1"
Inflector = "0.11.4"
indicatif = "0.15.0"
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
panoptes-account-decoder = { path = "../account-decoder", version = "=1.7.3" }
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-client = { path = "../client", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-transaction-status = { path = "../transaction-status", version = "=1.7.3" }
panoptes-vote-program = { path = "../programs/vote", version = "=1.7.3" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
