[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-cli"
description = "Blockchain, Rebuilt for Scale"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-cli"

[dependencies]
bincode = "1.3.1"
bs58 = "0.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.1"
criterion-stats = "0.3.0"
ctrlc = { version = "3.1.5", features = ["termination"] }
console = "0.14.1"
dirs-next = "2.0.0"
log = "0.4.11"
Inflector = "0.11.4"
indicatif = "0.15.0"
humantime = "2.0.1"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
panoptes-account-decoder = { path = "../account-decoder", version = "=1.7.3" }
panoptes-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.7.3" }
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-cli-config = { path = "../cli-config", version = "=1.7.3" }
panoptes-cli-output = { path = "../cli-output", version = "=1.7.3" }
panoptes-client = { path = "../client", version = "=1.7.3" }
panoptes-config-program = { path = "../programs/config", version = "=1.7.3" }
panoptes-faucet = { path = "../faucet", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-net-utils = { path = "../net-utils", version = "=1.7.3" }
panoptes_rbpf = "=0.2.11"
panoptes-remote-wallet = { path = "../remote-wallet", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-transaction-status = { path = "../transaction-status", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
panoptes-vote-program = { path = "../programs/vote", version = "=1.7.3" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.21"
tiny-bip39 = "0.7.0"
url = "2.1.1"

[dev-dependencies]
panoptes-core = { path = "../core", version = "=1.7.3" }
tempfile = "3.1.0"

[[bin]]
name = "panoptes"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
