[package]
name = "panoptes-core"
description = "Blockchain, Rebuilt for Scale"
version = "1.7.3"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-core"
readme = "../README.md"
repository = "https://github.com/panoptes-labs/panoptes"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
license = "Apache-2.0"
edition = "2018"

[badges]
codecov = { repository = "panoptes-labs/panoptes", branch = "master", service = "github" }

[dependencies]
ahash = "0.6.1"
base64 = "0.12.3"
bincode = "1.3.1"
blake3 = "0.3.7"
bv = { version = "0.11.1", features = ["serde"] }
bs58 = "0.3.1"
byteorder = "1.3.4"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.4"
ed25519-dalek = "=1.0.1"
fs_extra = "1.2.0"
flate2 = "1.0"
indexmap = { version = "1.5", features = ["rayon"] }
itertools = "0.9.0"
libc = "0.2.81"
log = "0.4.11"
lru = "0.6.1"
miow = "0.2.2"
net2 = "0.2.37"
num-traits = "0.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rand_core = "0.6.2"
raptorq = "1.4.2"
rayon = "1.5.0"
retain_mut = "0.1.2"
serde = "1.0.122"
serde_bytes = "0.11"
serde_derive = "1.0.103"
panoptes-account-decoder = { path = "../account-decoder", version = "=1.7.3" }
panoptes-banks-server = { path = "../banks-server", version = "=1.7.3" }
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-client = { path = "../client", version = "=1.7.3" }
panoptes-gossip = { path = "../gossip", version = "=1.7.3" }
panoptes-ledger = { path = "../ledger", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-merkle-tree = { path = "../merkle-tree", version = "=1.7.3" }
panoptes-metrics = { path = "../metrics", version = "=1.7.3" }
panoptes-measure = { path = "../measure", version = "=1.7.3" }
panoptes-net-utils = { path = "../net-utils", version = "=1.7.3" }
panoptes-perf = { path = "../perf", version = "=1.7.3" }
panoptes-poh = { path = "../poh", version = "=1.7.3" }
panoptes-program-test = { path = "../program-test", version = "=1.7.3" }
panoptes-rpc = { path = "../rpc", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-frozen-abi = { path = "../frozen-abi", version = "=1.7.3" }
panoptes-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.7.3" }
panoptes-streamer = { path = "../streamer", version = "=1.7.3" }
panoptes-transaction-status = { path = "../transaction-status", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
panoptes-vote-program = { path = "../programs/vote", version = "=1.7.3" }
spl-token-v2-0 = { package = "spl-token", version = "=3.1.1", features = ["no-entrypoint"] }
tempfile = "3.1.0"
thiserror = "1.0"
panoptes-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.7.3" }
trees = "0.2.1"

[dev-dependencies]
jsonrpc-core = "17.1.0"
jsonrpc-core-client = { version = "17.1.0", features = ["ipc", "ws"] }
matches = "0.1.6"
num_cpus = "1.13.0"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.56"
serial_test = "0.4.0"
panoptes-stake-program = { path = "../programs/stake", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
symlink = "0.1.0"
systemstat = "0.1.5"
tokio_02 = { version = "0.2", package = "tokio", features = ["full"] }

[build-dependencies]
rustc_version = "0.2"

[[bench]]
name = "banking_stage"

[[bench]]
name = "blockstore"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
