[package]
name = "panoptes-download-utils"
version = "1.7.3"
description = "Panoptes Download Utils"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-download-utils"
edition = "2018"

[dependencies]
bzip2 = "0.3.3"
console = "0.14.1"
indicatif = "0.15.0"
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
tar = "0.4.28"

[lib]
crate-type = ["lib"]
name = "panoptes_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
