[package]
name = "panoptes-faucet"
version = "1.7.3"
description = "Panoptes Faucet"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-faucet"
edition = "2018"

[dependencies]
bincode = "1.3.1"
byteorder = "1.3.4"
clap = "2.33"
log = "0.4.11"
serde = "1.0.122"
serde_derive = "1.0.103"
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-cli-config = { path = "../cli-config", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-metrics = { path = "../metrics", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "panoptes_faucet"

[[bin]]
name = "panoptes-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
