[package]
name = "panoptes-genesis-utils"
version = "1.7.3"
description = "Panoptes Genesis Utils"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-download-utils"
edition = "2018"

[dependencies]
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-download-utils = { path = "../download-utils", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }

[lib]
crate-type = ["lib"]
name = "panoptes_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
