[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-gossip"
description = "Blockchain, Rebuilt for Scale"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-gossip"

[dependencies]
bincode = "1.3.1"
bv = { version = "0.11.1", features = ["serde"] }
clap = "2.33.1"
flate2 = "1.0"
indexmap = { version = "1.5", features = ["rayon"] }
itertools = "0.9.0"
log = "0.4.11"
lru = "0.6.1"
matches = "0.1.8"
num-traits = "0.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.0"
serde = "1.0.122"
serde_bytes = "0.11"
serde_derive = "1.0.103"
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-client = { path = "../client", version = "=1.7.3" }
panoptes-frozen-abi = { path = "../frozen-abi", version = "=1.7.3" }
panoptes-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.7.3" }
panoptes-ledger = { path = "../ledger", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-measure = { path = "../measure", version = "=1.7.3" }
panoptes-metrics = { path = "../metrics", version = "=1.7.3" }
panoptes-net-utils = { path = "../net-utils", version = "=1.7.3" }
panoptes-perf = { path = "../perf", version = "=1.7.3" }
panoptes-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-streamer = { path = "../streamer", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
panoptes-vote-program = { path = "../programs/vote", version = "=1.7.3" }
thiserror = "1.0"

[dev-dependencies]
matches = "0.1.6"
num_cpus = "1.13.0"
serial_test = "0.4.0"

[build-dependencies]
rustc_version = "0.2"

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "panoptes-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
