[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-ledger-tool"

[dependencies]
bs58 = "0.3.1"
bytecount = "0.6.0"
clap = "2.33.1"
csv = "1.1.3"
futures = "0.3.8"
futures-util = "0.3.5"
histogram = "*"
itertools = "0.9.0"
log = { version = "0.4.11" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
serde_yaml = "0.8.13"
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-cli-output = { path = "../cli-output", version = "=1.7.3" }
panoptes-ledger = { path = "../ledger", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-measure = { path = "../measure", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-stake-program = { path = "../programs/stake", version = "=1.7.3" }
panoptes-storage-bigtable = { path = "../storage-bigtable", version = "=1.7.3" }
panoptes-transaction-status = { path = "../transaction-status", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
panoptes-vote-program = { path = "../programs/vote", version = "=1.7.3" }
tempfile = "3.1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "1.0"

[target."cfg(unix)".dependencies]
signal-hook = "0.1.15"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
