[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
edition = "2018"
name = "panoptes-local-cluster"
description = "Blockchain, Rebuilt for Scale"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-local-cluster"

[dependencies]
crossbeam-channel = "0.4"
itertools = "0.9.0"
gag = "1.0.0"
fs_extra = "1.2.0"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
panoptes-config-program = { path = "../programs/config", version = "=1.7.3" }
panoptes-core = { path = "../core", version = "=1.7.3" }
panoptes-client = { path = "../client", version = "=1.7.3" }
panoptes-download-utils = { path = "../download-utils", version = "=1.7.3" }
panoptes-exchange-program = { path = "../programs/exchange", version = "=1.7.3" }
panoptes-faucet = { path = "../faucet", version = "=1.7.3" }
panoptes-gossip = { path = "../gossip", version = "=1.7.3" }
panoptes-ledger = { path = "../ledger", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.7.3" }
panoptes-rpc = { path = "../rpc", version = "=1.7.3" }
panoptes-runtime = { path = "../runtime", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-stake-program = { path = "../programs/stake", version = "=1.7.3" }
panoptes-vote-program = { path = "../programs/vote", version = "=1.7.3" }
tempfile = "3.1.0"

[dev-dependencies]
assert_matches = "1.3.0"
serial_test = "0.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
