[package]
authors = ["Panoptes Maintainers <maintainers@panoptes.com>"]
edition = "2018"
name = "panoptes-log-analyzer"
description = "The panoptes cluster network analysis tool"
version = "1.7.3"
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
publish = false

[dependencies]
byte-unit = "4.0.9"
clap = "2.33.1"
serde = "1.0.122"
serde_json = "1.0.56"
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }

[[bin]]
name = "panoptes-log-analyzer"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
