[package]
name = "panoptes-logger"
version = "1.7.3"
description = "Panoptes Logger"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-logger"
edition = "2018"

[dependencies]
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.11"

[lib]
name = "panoptes_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
