[package]
name = "panoptes-merkle-tree"
version = "1.7.3"
description = "Panoptes Merkle Tree"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-merkle-tree"
edition = "2018"

[dependencies]
panoptes-program = { path = "../sdk/program", version = "=1.7.3" }
fast-math = "0.1"

# This can go once the BPF toolchain target Rust 1.42.0+
[target.bpfel-unknown-unknown.dependencies]
matches = "0.1.8"

[dev-dependencies]
hex = "0.4.2"

[lib]
crate-type = ["lib"]
name = "panoptes_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
