[package]
name = "panoptes-metrics"
version = "1.7.3"
description = "Panoptes Metrics"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-metrics"
edition = "2018"

[dependencies]
env_logger = "0.8.3"
gethostname = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }

[dev-dependencies]
rand = "0.7.0"
serial_test = "0.4.0"

[lib]
name = "panoptes_metrics"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
