[package]
name = "panoptes-net-utils"
version = "1.7.3"
description = "Panoptes Network Utilities"
authors = ["Panoptes Maintainers <maintainers@panoptes.foundation>"]
repository = "https://github.com/panoptes-labs/panoptes"
license = "Apache-2.0"
homepage = "https://panoptes.com/"
documentation = "https://docs.rs/panoptes-net-utils"
edition = "2018"

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.11"
nix = "0.19.0"
rand = "0.7.0"
serde = "1.0.122"
serde_derive = "1.0.103"
socket2 = "0.3.17"
panoptes-clap-utils = { path = "../clap-utils", version = "=1.7.3" }
panoptes-logger = { path = "../logger", version = "=1.7.3" }
panoptes-sdk = { path = "../sdk", version = "=1.7.3" }
panoptes-version = { path = "../version", version = "=1.7.3" }
tokio = { version = "1", features = ["full"] }
url = "2.1.1"

[lib]
name = "panoptes_net_utils"

[[bin]]
name = "panoptes-ip-address"
path = "src/bin/ip_address.rs"

[[bin]]
name = "panoptes-ip-address-server"
path = "src/bin/ip_address_server.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
